--- a/Week3_Notes_Julia.ipynb
+++ b/Week3_Notes_Julia.ipynb
@@ -94,7 +94,7 @@
     }
    ],
    "source": [
-    "# Matrix multiplicationn in terms of algebraic operations\n",
+    "# Matrix multiplication in terms of algebraic operations\n",
     "# A is a m by n matrix, and x is n vector (n by 1)\n",
     "\n",
     "# go row-by-row\n",
@@ -331,9 +331,9 @@
    "source": [
     "### Banded matrices\n",
     "\n",
-    "*Definition:* Zero off a prescribed nunmber of diagonals.\n",
+    "*Definition:* Zero off a prescribed number of diagonals.\n",
     "\n",
-    "*Bandwidths:* The number of non-zero diagonals.\n",
+    "*Bandwidths:* The number of non-zero subdiagonals.\n",
     "\n",
     "More specifically, a matrix has strictly lower-bandwidth $l$ if it has lower-bandwidth $l$, and there exists a $j$ such that $A[j+l,j] \\neq 0.$. A matrix has strictly upper-bandwidth $u$ if it has upper-bandwidth $u$ and there exists a $k$ such that $A[k, k+u] \\neq 0.$\n",
     "\n",
@@ -849,7 +849,7 @@
     "\n",
     "function getindex(Q::Reflection, k::Int, j::Int)\n",
     "    # TODO: Return Q[k,j]\n",
-    "    (k == j) - 2Q.v[k]*Q.v[j] # note true is treated like 1 and false like 0\n",
+    "    (k == j) - 2Q.v[k]*Q.v[j] # true is treated like 1 and false like 0\n",
     "end\n",
     "\n",
     "function *(P::Reflection, x::AbstractVector)\n",
@@ -872,7 +872,7 @@
    "source": [
     "### Householder reflection\n",
     "For a given vector $x$, define the Householder reflection $$Q^{\\pm, H}_x := Q_w = I-2ww^T$$\n",
-    "for $y = \\mp ||x||e_1 + x$ and $w = \\frac{y}{\\\\y\\\\}$\n",
+    "for $y = \\mp ||x||e_1 + x$ and $w = \\frac{y}{||y||}$\n",
     "\n",
     "The default choice in sign is $Q^H_x:=Q_x^{-sign(x1),H}$, which depends on the sign of the first entry of $x$ to gain stability.\n",
     "\n",
@@ -930,7 +930,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.7.1",
+   "display_name": "Julia 1.7.2",
    "language": "julia",
    "name": "julia-1.7"
   },
