--- a/Week4_Notes_Julia.ipynb
+++ b/Week4_Notes_Julia.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,19 +50,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "3-element Vector{Float64}:\n",
-       " 1.9814744826202584\n",
-       " 1.059175464184916\n",
-       " 1.9395104814130977"
+       " 1.994759335533941\n",
+       " 1.0755382123764397\n",
+       " 1.922312060882259"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,6 +181,24 @@
     "    end\n",
     "    Q, R\n",
     "end"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The modified Gram–Schmidt algorithm is a slight variation of Gram–Schmidt where\n",
+    "instead of computing\n",
+    "$$\n",
+    "𝐯_j := 𝐚_j - \\sum_{k=1}^{j-1} \\underbrace{𝐪_k^\\top 𝐚_j}_{r_{kj}} 𝐪_k\n",
+    "$$\n",
+    "we compute it step-by-step:\n",
+    "$$\n",
+    "\\begin{align*}\n",
+    "𝐯_j^1 &:= 𝐚_j \\\\\n",
+    "𝐯_j^{k+1} &:= 𝐯_j^k - 𝐪_k^\\top 𝐯_j^k 𝐪_k\n",
+    "\\end{align*}\n",
+    "$$"
    ]
   },
   {
@@ -461,7 +479,7 @@
    "source": [
     "# For the least square problem\n",
     "b = randn(3)\n",
-    "U\\(L\\b[σ]) == A \\ b"
+    "U\\(L\\b[σ]) == A \\ b # Solve min.||Ax = b||"
    ]
   },
   {
@@ -622,7 +640,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.7.1",
+   "display_name": "Julia 1.7.2",
    "language": "julia",
    "name": "julia-1.7"
   },
@@ -630,7 +648,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.7.1"
+   "version": "1.7.2"
   },
   "orig_nbformat": 4
  },
