--- a/Week5_Notes_Julia.ipynb
+++ b/Week5_Notes_Julia.ipynb
@@ -17,11 +17,11 @@
     "\n",
     "Cholesky decomposition: only relevant for symmetric positive defininte matrices.\n",
     "\n",
-    "**Proposition** If $A \\in \\mathbb{R}^{nxn}$ is positive definite, and $V \\in \\mathbb{R}^{nxn}$ is nonn-sigular, then $$V^TAV$$ is positive definite.\n",
+    "**Proposition** If $A \\in \\mathbb{R}^{nxn}$ is positive definite, and $V \\in \\mathbb{R}^{nxn}$ is non-sigular, then $$V^TAV$$ is positive definite.\n",
     "\n",
     "**Proposition** A matrix is symmetric positive definite if and only if it has a Cholesky decomposition $$A=LL^T$$ where the diagonals of $L$ are positive.\n",
     "\n",
-    "Different decompositions have trade-offs between speend and stability:\n",
+    "Different decompositions have trade-offs between speed and stability:\n",
     "\n",
     "On my machine, cholesky is about 1x faster than lu which is about 4x faster than QR.\n",
     "\n",
